infrastructures/OCI/k8s/events-backoffice/backoffice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backoffice
  namespace: apps
  labels:
    app: backoffice
    component: web
spec:
  type: ClusterIP
  selector:
    app: backoffice
    component: web
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
