infrastructures/OCI/k8s/events-backoffice/backoffice-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: events-backoffice-https
  namespace: events
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`events.oci.santocaruso.eu`)
      kind: Rule
      services:
        - name: backoffice
          port: 8000
  tls:
    certResolver: letsencrypt
